Добавил страницу articles

--- a/system/templates/block/navbar.html
+++ b/system/templates/block/navbar.html
@@ -15,6 +15,11 @@
                     {% trans 'Контакты' %}
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'articles' %}">
+                    {% trans 'Статьи' %}
+                </a>
+            </li>
         </ul>
     </div>
 </header>
